--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -158,10 +158,10 @@
 	background-image: url(../img/slider/banner.jpg);
 }
 .bg-img-2 {
-	background-image: url(../img/slider/affinity.jpeg);
+	background-image: url(../img/slider/datacenter.jpg);
 }
 .bg-img-3 {
-	background-image: url(../img/slider/cinelli.jpeg);
+	background-image: url(../img/slider/it_farming.jpg);
 }
 
 
